userapi/istio/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-destinationrule
  namespace: app-namespace
spec:
  host: devops-project-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
